# qobuzlibrarian

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.dev.yaml  compose.yaml  package-lock.json  package.json  pyproject.toml  requirements-test.txt  requirements.txt  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  test.yml
docker/: beets-chroma.yaml  beets-default.yaml  entrypoint.sh  image-lock.txt  streamrip-default.toml
docs/: api.md  cli.md  configuration.md  existing-libraries.md  troubleshooting.md
scripts/: compress.py  e2e_destructive_check.py  lock-image-deps.sh  lyric_fetch.py  make_logo.py  smoke_test.sh
src/qobuz_fetch/: __init__.py  cli.py  config.py  repair_log.py  run_lock.py
src/qobuz_fetch/api/: auth.py  client.py  search.py
src/qobuz_fetch/integrations/: beets.py  compress.py  lyrics.py  rip.py
src/qobuz_fetch/modes/: album.py  artist.py  consolidate.py  process.py  repair.py  upgrade.py  walk.py
src/qobuz_fetch/quality/: decision.py  tiers.py
src/qobuz_fetch/queue/: executor.py  persistence.py
src/qobuz_fetch/ui_cli/: colors.py  errors.py  logging.py  menu.py  prompts.py  sentinels.py
src/qobuz_fetch/web/: app.py  csrf.py  flows.py  jobs.py  settings_store.py
src/qobuz_fetch/web/static/: app.js  manifest.json  sw.js
src/qobuz_fetch/web/templates/: _search_results.html  base.html  index.html  job.html  library.html  queue.html  search.html  settings.html  upgrade.html
src/qobuz_librarian/: cli.py  config.py  download.py  repair_log.py  run_lock.py
src/qobuz_librarian/api/: album_cache.py  auth.py  client.py  search.py
src/qobuz_librarian/integrations/: beets.py  compress.py  downsample_engine.py  lyric_fetch.py  lyrics.py  rip.py
src/qobuz_librarian/modes/: album.py  artist.py  consolidate.py  downsample.py  lyrics.py  migrate.py  new_releases.py  process.py  repair.py  upgrade.py  walk.py
src/qobuz_librarian/quality/: decision.py  tiers.py
src/qobuz_librarian/queue/: builder.py  executor.py  persistence.py
src/qobuz_librarian/ui_cli/: colors.py  logging.py  menu.py  prompts.py  sentinels.py
src/qobuz_librarian/web/: app.py  auth.py  csrf.py  flows.py  job_persistence.py  jobs.py  settings_store.py
src/qobuz_librarian/web/static/: app.js  manifest.json  offline.html  sw.js
src/qobuz_librarian/web/static/src/: app.css
src/qobuz_librarian/web/templates/: _job_body.html  _job_queued.html  _quality_tabs.html  _queue_tabs.html  _review_candidates.html  _review_group.html  _review_page.html  _search_results.html  artist.html  base.html  downsample.html  error.html  hidden.html  history.html  index.html  job.html  library.html  lock_busy.html  login.html  lyrics.html  migrate.html  queue.html  repair.html  repair_history.html  search.html  settings.html  setup.html  upgrade.html
tests/: conftest.py  test_artist_missing.py  test_audit_2026_06_13.py  test_audit_2026_06_13_phaseb.py  test_auth.py  test_backup_and_catalog_helpers.py  test_catalog.py  test_client.py  test_compute_missing.py  test_config.py  test_discovery.py  test_docker_assets.py  test_download.py  test_downsample.py  test_hidden.py  test_integrations.py  test_migrate.py  test_modes_exit_codes.py  test_process.py  test_process_bookkeeping.py  test_quality.py  test_queue.py  test_repair_accuracy.py  test_repair_scan_feedback.py  test_run_lock.py  test_scanner.py  test_search.py  test_singles.py  test_singles_web.py  test_tags.py  test_ui_and_repair.py  test_web.py
