[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qobuz-librarian"
version = "0.1.0"
description = "Qobuz library manager"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "mutagen>=1.47",
    "tomlkit>=0.12",
    "syncedlyrics>=0.4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "httpx>=0.27",
]

[project.scripts]
qobuz-librarian = "qobuz_fetch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qobuz_fetch"]
